# Mu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Mu.sln  README.md  build.sh  premake5.lua  todo.txt
Mu/: Makefile  Mu.vcxproj
Mu/src/: common.hpp  interpreter.cpp  interpreter.hpp  main.cpp
Mu/src/analysis/: entity.cpp  entity.hpp  operand.cpp  operand.hpp  scope.cpp  scope.hpp  typer.cpp  typer.hpp  typer_op_eval.cpp  typer_op_eval.hpp  value.cpp  value.hpp
Mu/src/analysis/types/: schema.cpp  schema.hpp  type.cpp  type.hpp
Mu/src/parser/: parser.cpp  parser.hpp
Mu/src/parser/ast/: ast_common.hpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  renderer.cpp  renderer.hpp  specs.cpp  specs.hpp  stmt.cpp  stmt.hpp
Mu/src/parser/grammer/: grammer.cpp  grammer.hpp
Mu/src/parser/grammer/parsers/: block_parsers.cpp  block_parsers.hpp  call_parser.cpp  call_parser.hpp  cast_parser.cpp  cast_parser.hpp  compoundeliteral_parser.cpp  compoundeliteral_parser.hpp  defer_parser.cpp  defer_parser.hpp  for_parser.cpp  for_parser.hpp  if_parser.cpp  if_parser.hpp  infix_parser.cpp  infix_parser.hpp  lambda_parser.cpp  lambda_parser.hpp  literal_parser.cpp  literal_parser.hpp  match_parser.cpp  match_parser.hpp  name_parser.cpp  name_parser.hpp  parethesis_parser.cpp  parethesis_parser.hpp  period_parser.cpp  period_parser.hpp  prefix_parser.cpp  prefix_parser.hpp  prefixop_parser.cpp  prefixop_parser.hpp  range_parser.cpp  range_parser.hpp  return_parser.cpp  return_parser.hpp  while_parser.cpp  while_parser.hpp
Mu/src/parser/scanner/: scanner.cpp  scanner.hpp  token.cpp  token.hpp
Mu/src/utils/: directory.cpp  directory.hpp  file.cpp  file.hpp  io.cpp  io.hpp
docs/: main.mu  mu.md
tests/: .simple_expr.mu.swp  simple_expr.mu
tests/scanner/: main.cpp  out  scan_test.mu
